<resources>
    <string name="app_name">Medikuy</string>

    <!-- splash text -->
    <string name="text_splash1">Medi</string>
    <string name="text_splash2">Kuy</string>
    <string name="splash_logo">Image Splash Logo</string>
    <string name="splash_desc">Your Personal Health Care</string>

    <!-- login text -->
    <string name="title_login">Welcome to \nMedikuy</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="text_sign_up">Don\'t Have an Account?</string>
    <string name="min_password">The password length must more than 1 characters</string>

    <!-- register text -->
    <string name="title_register">Create \nAccount</string>
    <string name="fullname">Full Name</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="phone">Phone Number</string>
    <string name="gender">Gender</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already Have an Account?</string>
    <string name="different_confirm_password">Different Password</string>
    <string name="phone_mode">+ </string>
    <string name="min_full_name">Name can\'t empty</string>
    <string name="min_gender">Gender can\'t empty</string>
    <string name="min_date">Date can\'t empty</string>
    <string name="min_phone_number">Phone number can\'t empty</string>
    <string name="date_format">%02d-%02d-%d</string>

    <!-- main activity text -->
    <string name="home">Home</string>
    <string name="consult">Konsultasi</string>
    <string name="history">History Booking</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>

    <!-- reset password text -->
    <string name="back">Back</string>
    <string name="example">Sillahkan masukkan email untuk mendapatkan password terbaru.</string>
    <string name="email">Email</string>
    <string name="submit">Submit</string>
    <string name="resend_email">Resend Email</string>
    <string name="resend_email_timer">Resend Verification Email - %d sec</string>
    <string name="sign_up_underline"><u>Sign Up</u></string>
    <string name="not_email_address">This isn\'t email address</string>
    <string name="title_onboardfirst_1">Fresh</string>
    <string name="title_onboardfirst_2">Article</string>
    <string name="title_onboardsecond_1">Special</string>
    <string name="title_onboardsecond_2">Doctor</string>
    <string name="title_onboardthird_1">Make an</string>
    <string name="title_onboardthird_2">Appointment</string>

    <!--  artikel  -->
    <string name="artikel_title">Artikel Medikuy</string>
    <string name="search_article">Search Article</string>


    <!--  Booking  -->
    <string name="top_doctor">Top Doctor</string>
    <string name="detail_dokter">Detail Dokter</string>
    <string name="specialist">Specialist</string>
    <string name="biography">Biography</string>
    <string name="book_an_appointment">Book An Appointment</string>
    <string name="konfirmasi_booking">Konfirmasi Booking</string>
    <string name="booking_untuk">Booking untuk</string>
    <string name="ganti_pasien">Ganti Pasien</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="nama">Nama</string>
    <string name="golongan_darah">Golongan Darah</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="umur">Umur</string>
    <string name="status">Status</string>
    <string name="atur_waktu">Atur Waktu</string>
    <string name="pesan_pribadi">Pesan Pribadi</string>
    <string name="metode_pembayaran">Metode Pembayaran</string>
    <string name="content_booking">Silahkan datang pada jadwal yang telah anda pilih</string>
    <string name="kode_booking_anda">Kode booking anda</string>
    <string name="lihat_riwayat">Lihat Riwayat</string>
    <string name="tidak_kembali_ke_home">Tidak, Kembali ke Home</string>
    <string name="location">Location</string>
    <string name="artikel">Artikel</string>
    <string name="content_description">Content Description</string>
    <string name="lihat_semua_artikel">Lihat Semua Artikel</string>
    <string name="consult_to_doctor_anywhere_anytime">Consult to Doctor Anywhere, Anytime</string>
    <string name="see_doctor">See Doctor</string>

    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
        <item>Custom</item>
    </string-array>

    <!--profile-->
    <string name="my_profile">My Profile</string>
    <string name="profil1">Russi Hersiano</string>
    <string name="nohp_profil1">0812–7545–3367</string>
    <string name="account">Account</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="medikuy_app">MediKuy App</string>
    <string name="about_us">About Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="sign_out">Sign Out</string>
    <string name="label_full_name">Full Name</string>
    <string name="label_email">Email</string>
    <string name="label_birth_date">Birth Date</string>
    <string name="label_phone_number">Phone Number</string>
    <string name="save_edit">Save Edit</string>
    <string name="label_old_password">Old Password</string>
    <string name="label_new_password">New Password</string>
    <string name="label_confirm_password">Confirm Password</string>
    <string name="update_password">Update Password</string>
    <string name="success_change_password">Berhasil ganti password</string>
    <string name="phone_format">+ %s</string>
    <string name="different_old_password">Different Old Password</string>


    <!--    about us-->
    <string name="deskripsi_foto_about_us">Foto Ruangan - RS SMKDEV</string>
    <string name="judul_about_us">World Health Organization</string>
    <string name="isi_about_us">
        Amet - minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet. Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.

    \n\n Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet. Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.

    Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</string>

    <!--    artikel-->
    <string name="judul_artikel_semua">Artikel Kesehatan Terkini untuk Anda</string>
    <string name="artikel_medikuy">Artikel Medikuy</string>
    <string name="keluarga">Keluarga</string>
    <string name="nutrisi">Nutrisi</string>
    <string name="bayi">Bayi</string>
    <string name="kehamilan">Kehamilan</string>
    <string name="kecantikan">Kecantikan</string>
    <string name="diabetes">Diabetes</string>
    <string name="hidup_sehat">Hidup Sehat</string>
    <string name="recent_post">Recent Posts</string>
    <string name="see_all">See All</string>
    <string name="isi_artikel_horizontal_view">Tidak Ada yang Namanya Diabetes Kering atau Diabetes…</string>

    <string name="judul_artikel1">4 Manfaat Daun Sambiloto untuk Kulit yang Sayang Dilewatkan</string>
    <string name="isi_short_artikel1">Tak hanya baik untuk kesehatan tubuh, manfaat daun sambiloto untuk kesehatan kulit pun begitu beragam. Berbagai kandungan nutrisi di dalamnya dipercaya baik....</string>
    <string name="judul_artikel2">Mengenal COVID-19 Varian Omicron</string>
    <string name="isi_short_artikel2">Varian Omicron (B.1.1.529) merupakan salah satu hasil mutasi virus Corona. Berdasarkan bukti yang ada sejauh ini, varian Omicron memiliki tingkat mutasi yang tinggi....</string>
    <string name="judul_artikel3">4 Manfaat Daun Sambiloto untuk Kulit yang Sayang Dilewatkan</string>
    <string name="isi_short_artikel3">Tak hanya baik untuk kesehatan tubuh, manfaat daun sambiloto untuk kesehatan kulit pun begitu beragam. Berbagai kandungan nutrisi di dalamnya dipercaya baik....</string>
    <string name="isi_artikel1">Tak hanya baik untuk kesehatan tubuh, manfaat daun sambiloto untuk kesehatan kulit pun begitu beragam. Berbagai kandungan nutrisi di dalamnya dipercaya baik untuk mencegah infeksi pada kulit dan melindungi kulit dari bahaya radikal bebas.\n\n
    Daun sambiloto (Andrographis paniculata) adalah salah satu tanaman obat tradisional yang banyak dibudidayakan di berbagai negara Asia, termasuk Indonesia. Daun ini dipercaya dapat mengatasi berbagai masalah kesehatan, seperti gangguan fungsi hati, penyakit jantung, alergi, hingga infeksi.\n\n
    Beberapa studi mengungkapkan bahwa daun sambiloto kaya akan antioksidan, seperti andrographolide, flavonoid, terpenoid, tannin, dan saponin. Selain itu, tanaman ini juga diketahui bersifat antiradang, antikanker, antibakteri, dan antivirus.\n\n
    Dengan beragam nutrisinya tersebut, daun sambiloto diketahui dapat menurunkan risiko terkena masalah kulit. Inilah mengapa Anda bisa memanfaatkan daun sambiloto untuk menjaga kesehatan kulit. \n\n</string>

    <!-- patient -->
    <string name="tambah_patient">Tambah Patient</string>
    <string name="laki_laki">Laki-laki</string>
    <string name="perempuan">Perempuan</string>
    <string name="daftar">Daftar</string>
    <string name="pasien_name">John doe</string>

    <!-- forgot password -->
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>

    <string name="data_not_found">Data Not Found</string>

    <!-- content button & image description -->
    <string name="img_arrow_back">Image Arrow Back</string>
    <string name="img_about">Image About Us</string>
    <string name="btn_add_pasien">Button Add Pasient</string>

    <!-- doctor -->
    <string name="img_doctor">Image Doctor</string>
    <string name="name_doctor">Dr. Shaun Murphy</string>
    <string name="space">-</string>
    <string name="location_doctor">Location</string>
    <string name="price_doctor">250.000</string>
    <string name="rate_doctor">4</string>
    <string name="out_of_5">out of 5</string>
    <string name="space_2">:</string>
    <string name="image_article">Image_Article</string>
    <string name="gender_patient">Laki-Laki</string>
    <string name="birthdate_patient">DD/MM/YYYY</string>
    <string name="yearold_patient">20</string>
    <string name="blood_patient">O</string>
    <string name="status_patient">Keluarga</string>
    <string name="title_notfunction_article">Artikel Kesehatan Terkini untuk Anda</string>
    <string name="Icon_edit_profile">icon profile</string>
    <string name="img_profile">Image Profile</string>
    <string name="isi_schedule_doctor">isi schedule doctor</string>


</resources>