<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/line1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/spacing_175"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tvTitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_splash1"
            android:textColor="@color/blue_tosca"
            android:fontFamily="@font/montserrat_bold"
            android:textSize="@dimen/font_40"/>

        <TextView
            android:id="@+id/tvTitle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_splash2"
            android:fontFamily="@font/montserrat_bold"
            android:textSize="@dimen/font_40"
            android:textColor="@color/blue_splash"/>



    </LinearLayout>


    <ImageView
        android:id="@+id/iv_splash"
        android:layout_width="145dp"
        android:layout_height="145dp"
        android:layout_marginTop="@dimen/spacing_25"
        android:contentDescription="@string/splash_logo"
        android:src="@drawable/ic_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line1"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/iv_splash"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/splash_desc"
        android:textColor="@color/black"
        android:textSize="@dimen/font_16"
        android:fontFamily="@font/nunito_bold"
        android:layout_marginTop="@dimen/spacing_15"/>






</androidx.constraintlayout.widget.ConstraintLayout>