<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_40"
        android:layout_marginTop="@dimen/spacing_64"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/title_login"
        android:textColor="@color/black"
        android:textSize="@dimen/font_40"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInputEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_40"
        android:layout_marginTop="@dimen/spacing_32"
        android:layout_marginEnd="@dimen/spacing_40"
        app:hintTextAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_login">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/EditText.Login"
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:paddingStart="@dimen/padding_10"
            android:paddingEnd="@dimen/padding_10" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInputPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_40"
        android:layout_marginTop="@dimen/spacing_32"
        android:layout_marginEnd="@dimen/spacing_40"
        app:hintTextAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtInputEmail">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/EditText.Login"
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/password"
            android:paddingStart="@dimen/padding_10"
            android:paddingEnd="@dimen/padding_10"
            android:drawableEnd="@drawable/ic_hide_password"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>



    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_64"
        android:layout_marginStart="@dimen/spacing_40"
        android:layout_marginEnd="@dimen/spacing_40"
        android:background="@drawable/ic_btn_rounded"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/font_18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtInputPassword" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_5"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/forgot_password"
        android:textAlignment="center"
        android:textColor="@color/main_blue"
        android:textSize="@dimen/font_18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    <TextView
        android:id="@+id/titleSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_5"
        android:layout_marginBottom="@dimen/spacing_15"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/text_sign_up"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/font_18"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/txtNextSignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtNextSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_5"
        android:layout_marginBottom="@dimen/spacing_25"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:textColor="@color/main_blue"
        android:textSize="@dimen/font_18"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>