<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.booking.patient.AddPatientActivity">

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_action_back"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="@dimen/spacing_20"/>

    <TextView
        android:id="@+id/tvAddPatient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/btnBack"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/tambah_patient"
        android:fontFamily="@font/nunito_bold"
        android:textColor="@color/black"
        android:layout_margin="@dimen/spacing_30"
        android:textSize="@dimen/font_18"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInputName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_40"
        android:layout_marginHorizontal="@dimen/spacing_20"
        app:hintTextAppearance="@style/TextAppearance.AppCompat"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
        app:boxBackgroundColor="@color/white"
        android:hint="@string/nama"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAddPatient">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtFullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:paddingStart="@dimen/padding_10"
            android:paddingEnd="@dimen/padding_10" />

    </com.google.android.material.textfield.TextInputLayout>
    <RadioGroup
        android:id="@+id/rgGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/txtInputName"
        android:gravity="center"
        android:layout_margin="@dimen/spacing_20"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rbMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/laki_laki"
            android:layout_weight="2"/>

        <RadioButton
            android:id="@+id/rbFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/perempuan"
            />
    </RadioGroup>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtTanggalLahir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_20"
        app:hintTextAppearance="@style/TextAppearance.AppCompat"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
        app:boxBackgroundColor="@color/white"
        app:endIconDrawable="@drawable/ic_calendar"
        app:endIconMode="custom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgGender">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtTanggalLahir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/tanggal_lahir"
            android:inputType="none"
            android:paddingStart="@dimen/padding_10"
            android:paddingEnd="@dimen/padding_10" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtUmur"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_40"
        android:layout_marginHorizontal="@dimen/spacing_20"
        app:hintTextAppearance="@style/TextAppearance.AppCompat"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
        app:boxBackgroundColor="@color/white"
        android:hint="@string/umur"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTanggalLahir">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtUmur"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:paddingStart="@dimen/padding_10"
            android:paddingEnd="@dimen/padding_10" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtGolonganDarah"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_40"
        android:layout_marginHorizontal="@dimen/spacing_20"
        app:hintTextAppearance="@style/TextAppearance.AppCompat"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
        app:boxBackgroundColor="@color/white"
        android:hint="@string/golongan_darah"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtUmur">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtGolonganDarah"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:paddingStart="@dimen/padding_10"
            android:paddingEnd="@dimen/padding_10" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_20"
        app:hintTextAppearance="@style/TextAppearance.AppCompat"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtGolonganDarah">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/edtStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/status"
            android:inputType="none"
            android:paddingStart="@dimen/padding_10"
            android:paddingEnd="@dimen/padding_10" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnAddPatient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_20"
        android:background="@drawable/ic_btn_rounded"
        android:text="@string/daftar"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/font_18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtStatus" />





</androidx.constraintlayout.widget.ConstraintLayout>